--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,21 +1,25 @@
-# dependencies
-node_modules/
+# Dependencies
+/node_modules
+/.pnp
+.pnp.js
 
-# environment
+# Environment variables
 .env
 .env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# logs
+# Database
+/database/*.db
+/database/*.db-*
+
+# Logs
+logs
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# OS
+# Misc
 .DS_Store
-Thumbs.db
-
-# Banco de dados SQLite
-database/*.db
-database/*.db-*
-
