--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,16 +1,17 @@
-# dependencies
+# Dependencies
 /node_modules
 /.pnp
 .pnp.js
 
-# testing
+# Testing
 /coverage
 
-# production
+# Production
 /build
 
-# misc
+# Misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
@@ -19,4 +20,3 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
