--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -15,6 +15,22 @@
       "dest": "/static/$1"
     },
     {
+      "src": "/favicon.ico",
+      "dest": "/favicon.ico"
+    },
+    {
+      "src": "/manifest.json",
+      "dest": "/manifest.json"
+    },
+    {
+      "src": "/logo192.png",
+      "dest": "/logo192.png"
+    },
+    {
+      "src": "/logo512.png",
+      "dest": "/logo512.png"
+    },
+    {
       "src": "/logomarca.png",
       "dest": "/logomarca.png"
     },
@@ -24,4 +40,3 @@
     }
   ]
 }
-
